--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </select>
                 <div class="header-center">
                     <select id="year">
-                        <!-- 使用JavaScript动态生成1900-2050年的选项 -->
+                        <!-- 使用JavaScript动态生成1970-2050年的选项 -->
                     </select>
                     <div class="month-selector">
                         <button id="prevMonth">&lt;</button>
@@ -56,6 +56,9 @@
                 <div class="day" id="current-time"></div>
                 <div class="detail">
                     <p id="combined-info"></p>
+                </div>
+                <div class="six-weekday-info">
+                    <p id="six-weekday-explanation"></p>
                 </div>
                 <div class="list" id="events-list">
                     <!-- 事件列表将通过 JavaScript 动态添加 -->
