up Holiday explanation

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <div class="six-weekday-info">
                     <p id="six-weekday-explanation"></p>
                 </div>
+                <div class="divider"></div>
                 <div class="list" id="events-list">
                     <!-- 事件列表将通过 JavaScript 动态添加 -->
                 </div>
